--- a/app/style/sections/_header.scss
+++ b/app/style/sections/_header.scss
@@ -66,7 +66,7 @@
     .header__slider {
         width: 100%;
         height: 600px;
-        background-image: url(../../img/bg1.jpg);
+        background-image: url(../img/bg1.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         .header__slider--content {
@@ -125,7 +125,7 @@
                 position: absolute;
                 width: 22px;
                 height: 31px;
-                background-image: url(../../img/__.png);
+                background-image: url(../img/__.png);
                 z-index: 100;
                 left: 50%;
                 margin-left: -11px;
