--- a/app/style/sections/_team.scss
+++ b/app/style/sections/_team.scss
@@ -1,6 +1,6 @@
 .team__header {
     height: 300px;
-    background-image: url(../../img/bg2.jpg);
+    background-image: url(../img/bg2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 50px 0;
@@ -43,7 +43,7 @@
     .team__members--item{
         height: 300px;
         .member__foto{
-            background-image: url(../../img/adriana.jpg);
+            background-image: url(../img/adriana.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             padding: 20px 0 20px 20px;
