--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -8,4 +8,7 @@
 @import 'sections/header';
 @import 'sections/features';
 @import 'sections/team';
+@import 'sections/portfolio';
+@import 'sections/brands';
+@import 'sections/footer';
 
