--- a/app/style/sections/_team.scss
+++ b/app/style/sections/_team.scss
@@ -1,18 +1,14 @@
 .team__header {
-    height: 300px;
+
     background-image: url(../img/bg2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 50px 0;
-    text-align: center;
-    color: #fff;
-    .team__header--descr{
+
+    .team__header--descr {
         width: 1200px;
         height: 200px;
         border: 3px solid #fff;
         margin: 0 auto;
         padding: 65px 0;
-        .content__title{
+        .content__title {
             width: 240px;
             margin: 0 auto;
             position: relative;
@@ -33,17 +29,17 @@
                 top: 50%;
                 right: 5px;
             }
-            
+
         }
     }
 }
 
-.team__members{
+.team__members {
     padding: 50px 0;
-    .team__members--item{
+    .team__members--item {
         height: 300px;
-        .member__foto{
-            background-image: url(../img/adriana.jpg);
+        .member__foto {
+
             background-repeat: no-repeat;
             background-size: cover;
             padding: 20px 0 20px 20px;
@@ -53,7 +49,22 @@
                 border-right: 0;
             }
         }
-        .member__descr{
+
+        .adriana {
+            background-image: url(../img/adriana.jpg);
+        }
+
+        .olivia {
+            background-image: url(../img/olivia.jpg);
+        }
+        .thomas {
+            background-image: url(../img/thomas.jpg);
+        }
+
+        .taylor {
+            background-image: url(../img/thaylor.jpg);
+        }
+        .member__descr {
             padding: 20px 20px 20px 0;
             position: relative;
             .member__descr--line {
@@ -62,11 +73,11 @@
                 border-left: 0;
                 text-align: center;
                 padding-top: 25px;
-                
-                
+
+
             }
-            
-            &:before{
+
+            &:before {
                 content: '';
                 width: 50px;
                 height: 50px;
@@ -79,8 +90,45 @@
                 left: -25px;
             }
         }
+
+        &:nth-of-type(2n) {
+            flex-flow: row-reverse;
+            .member__foto {
+                padding: 20px 20px 20px 0;
+                .member__foto--line {
+                    border-left: 0;
+                    border-right: 4px solid #fff;
+                }
+            }
+            .member__descr {
+                padding: 20px 0 20px 20px;
+                .member__descr--line {
+                    border-right: 0;
+                    border-left: 4px solid #000;
+                }
+                &:before {
+                    width: 0;
+                    height: 0;
+
+                }
+                &:after {
+                    content: '';
+                    width: 50px;
+                    height: 50px;
+                    background-color: #fff;
+                    transform: rotate(45deg);
+                    position: absolute;
+                    z-index: 90;
+                    top: 50%;
+                    margin-top: -35px;
+                    right: -25px;
+                }
+            }
+
+
+        }
     }
-    .descr__title{
+    .descr__title {
         position: relative;
         margin-bottom: 30px;
         .name {
@@ -90,10 +138,10 @@
         }
         .role {
             font-size: 16px;
-            
+
         }
-        
-        &:after{
+
+        &:after {
             content: '';
             width: 180px;
             height: 3px;
@@ -101,11 +149,11 @@
             position: absolute;
             left: 180px;
             top: 92px;
-            
+
         }
-        
+
     }
-    
+
     .descr__text {
         width: 320px;
         margin: 0 auto;
