--- a/app/style/_base.scss
+++ b/app/style/_base.scss
@@ -20,7 +20,9 @@ h2 {
 }
 
 h3 {
-    font-weight: 400;
+    font-weight: 300;
+    font-size: 30px;
+    text-transform: uppercase;
 }
 
 h4 {
@@ -44,4 +46,44 @@ a {
 a:hover {
     color: #000;
     text-decoration: none;
+}
+
+
+.section__header {
+       height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 50px 0;
+    text-align: center;
+    color: #fff;
+        .section__header--descr {
+        width: 1200px;
+        height: 200px;
+        border: 3px solid #fff;
+        margin: 0 auto;
+        padding: 65px 0;
+        .content__title {
+            width: 240px;
+            margin: 0 auto;
+            position: relative;
+            &:before,
+            &:after {
+                content: '';
+                width: 60px;
+                height: 1px;
+                background-color: #fff;
+                position: absolute;
+                z-index: 90;
+            }
+            &:before {
+                top: 50%;
+                left: 5px;
+            }
+            &:after {
+                top: 50%;
+                right: 5px;
+            }
+
+        }
+    }
 }
