--- a/app/style/sections/_header.scss
+++ b/app/style/sections/_header.scss
@@ -11,19 +11,19 @@
             display: flex;
             justify-content: space-between;
             .header__menu--socials-logo {
-                width: 100px;
-                height: 45px;
+                width: 98px;
+                height: 43px;
                 border: 1px solid #f34739;
                 border-bottom-left-radius: 20px;
                 border-bottom-right-radius: 20px;
                 border-top-left-radius: 20px;
-                padding: 0 18px;
-                font-size: 22px;
-                line-height: 45px;
+                font-size: 24px;
+                line-height: 43px;
                 font-weight: 300;
                 text-transform: uppercase;
-                letter-spacing: 3px;
+                letter-spacing: 2px;
                 box-sizing: border-box;
+                text-align: center;
             }
             .header__menu--socials-list {
                 .social-list-item {
