--- a/app/style/sections/_brands.scss
+++ b/app/style/sections/_brands.scss
@@ -42,139 +42,139 @@
 }
 
 .brand--1 {
-    background-image: url(../../img/brands/1.png);
+    background-image: url(../img/brands/1.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--2 {
-    background-image: url(../../img/brands/2.png);
+    background-image: url(../img/brands/2.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--3 {
-    background-image: url(../../img/brands/3.png);
+    background-image: url(../img/brands/3.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--4 {
-    background-image: url(../../img/brands/4.png);
+    background-image: url(../img/brands/4.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--5 {
-    background-image: url(../../img/brands/5.png);
+    background-image: url(../img/brands/5.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--6 {
-    background-image: url(../../img/brands/6.png);
+    background-image: url(../img/brands/6.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--7 {
-    background-image: url(../../img/brands/7.png);
+    background-image: url(../img/brands/7.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--8 {
-    background-image: url(../../img/brands/8.png);
+    background-image: url(../img/brands/8.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--9 {
-    background-image: url(../../img/brands/9.png);
+    background-image: url(../img/brands/9.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--10 {
-    background-image: url(../../img/brands/10.png);
+    background-image: url(../img/brands/10.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--11 {
-    background-image: url(../../img/brands/11.png);
+    background-image: url(../img/brands/11.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--12 {
-    background-image: url(../../img/brands/12.png);
+    background-image: url(../img/brands/12.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 .brand--13 {
-    background-image: url(../../img/brands/13.png);
+    background-image: url(../img/brands/13.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--14 {
-    background-image: url(../../img/brands/14.png);
+    background-image: url(../img/brands/14.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 .brand--15 {
-    background-image: url(../../img/brands/15.png);
+    background-image: url(../img/brands/15.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--16 {
-    background-image: url(../../img/brands/16.png);
+    background-image: url(../img/brands/16.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 .brand--17 {
-    background-image: url(../../img/brands/17.png);
+    background-image: url(../img/brands/17.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--18 {
-    background-image: url(../../img/brands/18.png);
+    background-image: url(../img/brands/18.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 .brand--19 {
-    background-image: url(../../img/brands/9.png);
+    background-image: url(../img/brands/9.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--20 {
-    background-image: url(../../img/brands/20.png);
+    background-image: url(../img/brands/20.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 .brand--21 {
-    background-image: url(../../img/brands/21.png);
+    background-image: url(../img/brands/21.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--22 {
-    background-image: url(../../img/brands/22.png);
+    background-image: url(../img/brands/22.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 .brand--23 {
-    background-image: url(../../img/brands/23.png);
+    background-image: url(../img/brands/23.png);
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .brand--24 {
-    background-image: url(../../img/brands/24.png);
+    background-image: url(../img/brands/24.png);
     background-repeat: no-repeat;
     background-position: center;
 }
