--- a/app/style/sections/_footer.scss
+++ b/app/style/sections/_footer.scss
@@ -16,7 +16,8 @@
                 position: absolute;
                 z-index: 90;
                 top: 40px;
-                left: 105px;
+                left: 50%;
+                margin-left: -70px;
             }
         }
         .footetr__item--descr{
