--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -1,3 +1,5 @@
+//Base styles
+
 @import 'normalize';
 @import 'fonts';
 @import 'base';
@@ -11,4 +13,8 @@
 @import 'sections/portfolio';
 @import 'sections/brands';
 @import 'sections/footer';
+
+//Media
+
+@import 'media';
 
