--- a/app/style/sections/_portfolio.scss
+++ b/app/style/sections/_portfolio.scss
@@ -1,5 +1,5 @@
 .portfolio__header {
-    background-image: url(../../img/bg3.jpg);
+    background-image: url(../img/bg3.jpg);
     .section__header--descr {
         .content__title {
             &:before,
