--- a/app/style/sections/_team.scss
+++ b/app/style/sections/_team.scss
@@ -37,9 +37,9 @@
 .team__members {
     padding: 50px 0;
     .team__members--item {
-        height: 300px;
+        min-height: 300px;
         .member__foto {
-
+            height: 300px;
             background-repeat: no-repeat;
             background-size: cover;
             padding: 20px 0 20px 20px;
@@ -65,6 +65,7 @@
             background-image: url(../img/thaylor.jpg);
         }
         .member__descr {
+            height: 300px;
             padding: 20px 20px 20px 0;
             position: relative;
             .member__descr--line {
@@ -147,7 +148,8 @@
             height: 3px;
             background-color: #f34739;
             position: absolute;
-            left: 180px;
+            left: 50%;
+            margin-left: -90px;
             top: 92px;
 
         }
