--- a/app/style/sections/_header.scss
+++ b/app/style/sections/_header.scss
@@ -192,7 +192,7 @@
             position: fixed;
             z-index: 999;
             width: 0px;
-            height: 600px;
+            height: 100vh;
             display: block;
             transition: .5s cubic-bezier(.75, .02, .33, 1);
             background-color: #101010;
